[package]
name = "twitch_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.26", features = ["sink", "std"] }
futures = "*"
tokio-stream = "*"
warp = "0.3"
tokio = { version = "1.25.0", features = ["full"] }
twitch-irc = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
