[package]
name = "rust_ws_game_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
anyhow = "1.0.70"
regex = "1.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
twitch-irc = "5.0.0"
