[package]
name = "rust_ws_game_library"
default-run = "rust_ws_game_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
anyhow = "1.0.70"
rand = "0.8.5"
regex = "1.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
twitch-irc = "5.0.0"
reqwest = { version = "0.11.16", features = ["blocking"] }
dotenv = "0.15.0"
serde_derive = "1.0.160"
thiserror = "1.0.40"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-actix-native-tls", "uuid"] }
